# GoogleBenchmark-CMake-Example

./: CMakeLists.txt
src/CRTPBenchmarks/: CMakeLists.txt  CRTPBenchmarks.cpp
